--- a/layout/profile.phtml
+++ b/layout/profile.phtml
@@ -33,13 +33,13 @@ muat_layout(
                                     'label' => 'User Name',
                                     'value' => $current_user['user_name'],
                                 ],
-                                'nama_awal' => [
-                                    'label' => 'Nama Awal',
+                                'nama_depan' => [
+                                    'label' => 'Nama Depan',
                                     'input' => [
                                         'type' => 'text',
                                         'minlength'=> 3,
                                         'maxlength'=> 255,
-                                        'value' => $current_user['nama_awal'],
+                                        'value' => $current_user['nama_depan'],
                                         'required' => 'required'
                                     ],
                                 ],
