--- a/layout/anggota-ubah.phtml
+++ b/layout/anggota-ubah.phtml
@@ -1,4 +1,9 @@
 <?php
+if (empty($variable['user_id'])) {
+    redirect(get_base_url_index('anggota'));
+}
+$user_id = $variable['user_id'];
+$current_user = database_get_anggota_by_id($user_id);
 // muat header
 muat_layout(
     'header',
@@ -7,5 +12,127 @@ muat_layout(
     ]
 );
 ?>
+    <div class="row">
+        <div class="col-md-12">
+            <br/>
+            <?php if ($current_user['is_admin']) { ?>
+                <div class="alert-warning alert">
+                    <p>Ini adalah akun admin</p>
+                </div>
+            <?php } ?>
+            <form method="post" action="<?= get_base_url_index('anggota/ubah/'.$user_id);?>">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h1 class="panel-title">Ubah Data <span class="label label-info"><?= $current_user['user_name'];?></span></h1>
+                    </div>
+                    <div class="panel-body">
+                        <?php
+                        if (!empty($variable['message'])
+                            && is_string($variable['message'])) {
+                            echo $variable['message'];
+                        }
+                        ?>
+                        <p>
+                          <small><em><strong><a href="<?= get_base_url_index('anggota/hapus/'.$current_user['id']);?>" style="color: #ff3535">Hapus Akun Ini</a></strong></em></small>
+                        </p>
+                        <table class="table table-responsive">
+                            <?php
+                            $list = [
+                                'user_id' => [
+                                    'label' => 'User ID',
+                                    'value' => $current_user['id'],
+                                ],
+                                'user_name' => [
+                                    'label' => 'User Name',
+                                    'input' => [
+                                        'type' => 'text',
+                                        'minlength'=> 3,
+                                        'pattern' => '[A-Za-z0-9][A-Za-z0-9_-]+',
+                                        'maxlength'=> 100,
+                                        'value' => $current_user['user_name'],
+                                        'required' => 'required'
+                                    ],
+                                ],
+                                'nama_depan' => [
+                                    'label' => 'Nama Depan',
+                                    'input' => [
+                                        'type' => 'text',
+                                        'minlength'=> 3,
+                                        'maxlength'=> 255,
+                                        'value' => $current_user['nama_depan'],
+                                        'required' => 'required'
+                                    ],
+                                ],
+                                'nama_belakang' => [
+                                    'label' => 'Nama Belakang',
+                                    'input' => [
+                                        'type' => 'text',
+                                        'minlength'=> 0,
+                                        'maxlength'=> 255,
+                                        'value' => $current_user['nama_belakang'],
+                                    ],
+                                ],
+                                'email' => [
+                                    'label' => 'Alamat Email',
+                                    'input' => [
+                                        'type' => 'email',
+                                        'maxlength'=> 255,
+                                        'value' => $current_user['email'],
+                                        'required' => 'required'
+                                    ],
+                                ],
+                            ];
+
+                            foreach ($list as $name => $value) {
+                                if (!isset($value['input'])) {
+                                    ?>
+                                    <tr>
+                                        <td width="180"><label for="user-<?= $name;?>"><?=$value['label'];?></label></td>
+                                        <td><?= $value['value'];?></td>
+                                    </tr>
+
+                                    <?php
+                                    continue;
+                                }
+                                $attr = "";
+                                foreach ($value['input'] as $k => $n) {
+                                    $n = htmlspecialchars($n, ENT_QUOTES);
+                                    $attr .= "{$k}=\"{$n}\" ";
+                                }
+                                ?>
+                                <tr>
+                                    <td width="180"><label for="user-<?= $name;?>"><?=$value['label'];?></label></td>
+                                    <td><input class="form-control" <?= $attr;?>name="user[<?= $name;?>]" id="user-<?= $name;?>" placeholder="Masukkan <?= $value['label'];?>"></td>
+                                </tr>
+
+                            <?php } ?>
+                            <tr>
+                                <td width="180"><label for="user-password">Password</label></td>
+                                <td>
+                                    <input class="form-control" name="user[password]" id="user-password" placeholder="Masukkan Password">
+                                    <em><small>Kosongi jika tidak ingin mengubah password</small></em>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td width="180"><label for="user-password">Status Admin</label></td>
+                                <td>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input value="yes" class="checkbox" type="checkbox" name="user[is_admin]" id="user-is_admin"<?= $current_user['is_admin']? ' checked':'';?>>
+                                            <em><small>Centang apabila ingin menjadikan admin</small></em>
+                                        </label>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="panel-footer">
+                        <button type="submit" class="btn btn-primary pull-right">Simpan</button>
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 <?php
 muat_layout('footer');
