--- a/layout/anggota.phtml
+++ b/layout/anggota.phtml
@@ -6,6 +6,136 @@ muat_layout(
         'title' => 'Daftar Anggota'
     ]
 );
+
+$page = get('page', 0);
+$total_anggota = database_get_jumlah_anggota();
+// list user perhalaman
+$per_halaman = 20;
+$jumlah_halaman = abs($total_anggota / $per_halaman);
+$jumlah_halaman = intval($jumlah_halaman) + (!is_int($jumlah_halaman) ? 1 :0);
+$current_page = is_numeric($page) ? intval($page) : 0;
+$current_page = $current_page < 1 ? 1 : $current_page;
+$current_page = $current_page > $jumlah_halaman ? $jumlah_halaman : $current_page;
+$offset = ($current_page-1) * $per_halaman;
+
+// buat loop anggota
+$loopAnggota = create_query_loop_anggota($offset, $per_halaman);
+$loopAnggota = !$loopAnggota ? [] : $loopAnggota;
+$anggota = [];
+foreach ($loopAnggota as $key => $value) {
+  $anggota[$key] = $value;
+}
+unset($loopAnggota);
 ?>
+      <div class="row">
+        <div class="col-md-12">
+          <p>&nbsp;</p>
+          <div class="alert alert-info">
+            <p>Menampilkan <span class="label label-info"><?= count($anggota);?></span>  dari <span class="label label-success"><?= $total_anggota;?></span> anggota.</p>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h1 class="panel-title">Daftar Anggota</h1>
+            </div>
+            <div class="panel-body">
+              <table class="table table-responsive table-bordered">
+                <thead>
+                  <tr>
+                    <th width="60" class="text-center">User ID</th>
+                    <th width="180">User Name</th>
+                    <th width="180">Alamat Email</th>
+                    <th>Nama Depan</th>
+                    <th width="160">Tindakan</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <?php foreach ($anggota as $key => $value) {
+                        unset($anggota[$key]);
+                        $is_current_user = abs($value['id']) === get_current_user_id();
+                    ?>
+                      <tr>
+                        <td width="80" class="text-center"><?= $value['id'];?></td>
+                        <td width="180"><?php
+                            $userName = substr($value['user_name'], 0, 18);
+                            if (strlen($userName) !== strlen($value['user_name'])) {
+                              $userName .= ' ...';
+                            }
+                            echo htmlentities($userName);
+                            ?></td>
+                        <td width="180"><?php
+                            $email = substr($value['email'], 0, 18);
+                            if (strlen($email) !== strlen($value['email'])) {
+                                $email .= ' ...';
+                            }
+                            echo htmlentities($email);
+                            ?></td>
+                        <td>
+                            <?php
+                            $nama_depan = substr($value['nama_depan'], 0, 20);
+                            if (strlen($nama_depan) !== strlen($value['nama_depan'])) {
+                                $nama_depan .= ' ...';
+                            }
+                            $nama_depan = htmlentities($nama_depan);
+                            if ($is_current_user) {
+                                $nama_depan = '<span class="label label-info">akun anda</span> ' . $nama_depan;
+                            } elseif ($value['is_admin']) {
+                                $nama_depan = '<span class="label label-warning">admin</span> ' . $nama_depan;
+                            }
+                            echo $nama_depan;
+                            ?>
+                        </td>
+                        <td width="160" class="text-center">
+                          <a href="<?= get_base_url_index('/anggota/ubah/'.$value['id']);?>" class="btn btn-primary btn-sm<?= $is_current_user ? ' btn-block' :'';?>">Ubah</a>
+                          <?php if (!$is_current_user) {?>
+                              <a href="<?= get_base_url_index('/anggota/hapus/'.$value['id']);?>" class="btn btn-danger btn-sm">Hapus</a>
+                          <?php } ?>
+                        </td>
+                      </tr>
+                  <?php } ?>
+                </tbody>
+              </table>
+            </div>
+            <div class="panel-footer">
+              <div class="row">
+                <div class="col-md-9 col-sm-9">
+                  <div class="form-group form-inline">
+                    <form method="GET" action="" style="margin-top: .5em">
+                      <label for="paging">Menuju Halaman</label>&nbsp;
+                      <select id="paging" class="form-control" name="page" onchange="window.location.href = '?page=' + this.options[this.options.selectedIndex].value">
+                          <?php
+                            foreach (range(1, $jumlah_halaman) as $value) {
+                                $selected = $value === $current_page ? ' selected' : '';
+                          ?>
+                              <option value="<?= $value;?>"<?=$selected;?>>Halaman <?= $value;?></option>
+                          <?php } ?>
+                      </select>
+                    </form>
+                  </div>
+                </div>
+                <div class="col-md-3 col-sm-3">
+                  <div class="form-group text-center">
+                      <p style="margin-top: 1em">
+                    <?php if ($jumlah_halaman > 1) { ?>
+                        <?php if ($current_page > 1) {?>
+                            <span class="page-selector"><a title="Halaman Sebelumnya" href="?page=<?= $current_page-1;?>"><i class="glyphicon glyphicon-chevron-left"></i></a></span>
+                        <?php } else { ?>
+                            <span class="page-selector"><i class="glyphicon glyphicon-chevron-left"></i></span>
+                        <?php } ?>
+                            <small>Navigasi Halaman</small>
+                        <?php if ($current_page < $jumlah_halaman) {?>
+                            <span class="page-selector"><a title="Halaman Selanjutnya" href="?page=<?= $current_page+1;?>"><i class="glyphicon glyphicon-chevron-right"></i></a></span>
+                        <?php } else { ?>
+                            <span class="page-selector"><i class="glyphicon glyphicon-chevron-right"></i></span>
+                        <?php } ?>
+                    <?php } ?>
+                      </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- .panel -->
+        </div>
+      </div>
 <?php
 muat_layout('footer');
