--- a/layout/header.phtml
+++ b/layout/header.phtml
@@ -76,7 +76,7 @@ $first_name = ucfirst(strtolower((string)array_shift($first_name)));
               <?php
               // apabila non admin
               if (!is_admin()) {?>
-                <li><a href="<?= get_base_url_index('pinjamanku/ku');?>">Pinjamanku</a></li>
+                <li><a href="<?= get_base_url_index('pinjaman/ku');?>">Pinjamanku</a></li>
                 <li><a href="<?= get_base_url_index('buku');?>">Daftar Buku</a></li>
               <?php } ?>
               <?php
